apps/api-docs/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-docs
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: api-docs
  template:
    metadata:
      labels:
        app: api-docs
    spec:
      imagePullSecrets:
        - name: xdew-pull-secret
      containers:
        - name: api-docs
          image: ghcr.io/xdew-studio/api-docs:3.2.6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              memory: 100Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 5
