apps/api-docs/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-docs
spec:
  selector:
    app: api-docs
  ports:
    - name: api-docs-svc-port
      protocol: TCP
      port: 80
      targetPort: 8080
