apps/api-docs/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-docs
  labels:
    app: api-docs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: xdew-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - developers.xdew.ch
      secretName: api-docs-tls
  rules:
    - host: developers.xdew.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-docs
                port:
                  number: 80
